# ouroboros

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKPOINT-1.md  CHECKPOINT-2.md  CRITICAL-BUGS.md  Dockerfile  FULL-PLAN.md  FUTURE-FIXES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: ci.yml  entropy_gc.yml  harness-fix.yml  issue-trigger.yml  pr-feedback.yml  run-task.yml
agents/: __main__.py  cli.py  server.py
agents/core/: bootstrap.py  config.py  context_builder.py  guards.py  instrumentation.py  paths.py  state.py  workflow_helpers.py
agents/models/: benchmark.py  cleaner.py  contracts.py  cost.py  harness.py  implementer.py  mutation.py  planner.py  post_mortem.py  registry.py  reproducer.py  reviewer.py  test_quality.py  test_writer.py  tool_catalog.py  validator.py
agents/prompts/: cleaner.txt  implementer.txt  planner.txt  post_mortem.txt  reviewer.txt  test_writer.txt
agents/tools/: app_logging.py  benchmark.py  browser.py  contract_verifier.py  fs.py  git.py  harness.py  mutation_sampler.py  observability.py  registry.py  shell.py  test_quality.py  tool_wiring.py
agents/workers/: cleaner.py  implementer.py  planner.py  reviewer.py  (+3 more)
benchmarks/: test_context_perf.py
docs/: DESIGN.md  GOLDEN_PRINCIPLES.md  PLANS.md  QUALITY_SCORE.md
lint/: arch_lint.py  doc_lint.py  golden_lint.py  golden_lint_ext.py  rules.py  run_lint.py  workflow_lint.py  workflow_lint_ext.py
repo_index/: build_index.py  file_map.json  symbols.json
scripts/: worktree_down.sh  worktree_up.sh
(+48 files in other folders)
