[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-ouroboros"
version = "0.1.0"
description = "Agent-first engineering infrastructure — the system that manages and improves itself"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.14,<2.0",
    "langgraph>=0.2.0",
    "logfire[pydantic-ai]>=1.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "tree-sitter>=0.23.0",
    "playwright>=1.47.0",
    "ruff>=0.6.0",
    "anyio>=4.6.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
]

[project.scripts]
ouroboros = "agents.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "lint", "repo_index", "harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]  # benchmarks/ excluded intentionally; run via: pytest benchmarks/ -m benchmark
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["agents"]
exclude = ["tests", "benchmarks", "scripts"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "lint", "repo_index"]
